make Doge icon smaller and fix some css redundancy

--- a/frontend/src/pages/SearchPage.css
+++ b/frontend/src/pages/SearchPage.css
@@ -5,7 +5,6 @@
     background-color: white;
     z-index: 100;
     align-items: flex-start;
-    padding: 30px;
     border-bottom: 1px solid lightgray;
 }
 
@@ -14,10 +13,10 @@
     object-fit: contain;
     height: 50px;
     margin-right: -20px;
+    margin-top: 10px;
 }
 
 .searchPage__headerBody > .search > .search__input {
-    margin-top: 0;
     width: unset;
     margin: unset;
     max-width: unset;
